--- a/gradle.properties
+++ b/gradle.properties
@@ -8,18 +8,18 @@ maven_group = io.github.ladysnake
 archives_base_name = effective
 
 #Mod Depencencies
-mod_menu_version= 4.2.0-beta.2
-sodium_version= mc1.19.2-0.4.4
-iris_version= 1.6.4+1.19.2
-satin_version = 1.9.0
-midnightlib_version= 1.0.0
+mod_menu_version=6.2.3
+sodium_version=mc1.19.4-0.4.10
+iris_version=1.6.4+1.19.4
+satin_version = 1.12.1
+midnightlib_version= 1.3.0
 lodestone_version = 9fe9aea
 mixin_extras_version=0.2.0-beta.8
 
 # Release metadata
 modrinth_id = pcPXJeZi
 curseforge_id = 556381
-curseforge_versions = 1.19.2
+curseforge_versions = 1.19.4
 cf_requirements = qsl
 cf_embeddeds = satin-api
 release_type = release
