--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ sodium_version=mc1.19.4-0.4.10
 iris_version=1.6.4+1.19.4
 satin_version = 1.12.1
 midnightlib_version= 1.3.0
-lodestone_version = 9fe9aea
+lodestone_version = 1.19.3-SNAPSHOT
 mixin_extras_version=0.2.0-beta.8
 
 # Release metadata
