--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ loader_version=0.16.5
 
 # Mod Properties
 mod_version=2.2.2.1
-maven_group=ladynake
+maven_group=ladysnake
 archives_base_name=effective
 
 # Dependencies
